<resources>
    <string name="app_name">Just Java</string>
    <string name="order_summary">Order Summary</string>
    <string name="price">$10</string>
    <string name="order">Order</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="quantity">Quantity</string>
    <string name="chocolate_cream">Chocolate Cream</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="toppings">Toppings</string>
    <string name="enter_your_name">Enter Your Name</string>
</resources>
