<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:orientation="vertical"
    >


    <EditText
        android:id="@+id/text_input"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textCapWords"
        android:hint="@string/enter_your_name"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"/>

    <CheckBox
        android:id="@+id/whipped_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        android:textSize="16sp"
        android:paddingLeft="24dp"
        android:paddingStart="24dp" />

    <CheckBox
        android:id="@+id/chocolate_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate_cream"
        android:textSize="16sp"
        android:paddingLeft="24dp"
        android:paddingStart="24dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:onClick="increment"
            android:text="@string/increment" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="0"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:onClick="decrement"
            android:text="@string/decrement" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/order_summary"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/price"
        android:textColor="#000000"
        android:textSize="16sp"
        tools:ignore="HardcodedText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/order" />

</LinearLayout>
</ScrollView>